# bedrock-agentcore-multi-framework

./: .bedrock_agentcore.yaml  Dockerfile  pyproject.toml
src/: main.py
src/app/agents/: strands.py
