[project]
name = "bedrock-agentcore-multi-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.1",
    "crewai>=0.150.0",
    "haystack-ai>=2.15.2",
    "langgraph>=0.5.4",
    "strands-agents>=1.1.0",
    "strands-agents-tools>=0.2.2",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.1.2",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
